Design And Optimization Commit : Fixed some hard coded sizing such as the sidebar. Fixed some issues concerning the long game title that could be too long for some games. Added compatibility for other browsers (future usage) Fully fixed reactivity for the library that was horrendous previously. Removed most event listeners for better optimizations. made the reload quicker because the user will probably just spam the save settings and it will break. Removed repetitive TODOs.

--- a/src/components/Popularrepacks-01/Popularrepacks.css
+++ b/src/components/Popularrepacks-01/Popularrepacks.css
@@ -62,14 +62,22 @@ body {
   #first-long-game-title {
     top: 0;
     filter: brightness(0.5);
-    position: fixed;
+    position: absolute;
     margin-left: 1em;
     margin-top: 11.5em;
     font-weight: 500;
     color: white;
     cursor: pointer;
+    
+    white-space: wrap;
+    overflow: hidden; 
+    text-overflow: clip;
+    max-width: 90%; 
+    text-shadow: -11px 9px 4px #ffffff;
   }
   
+
+
   #start-scroll-button {
     position: absolute; /* Position relative to the parent .popular-repacks */
     left: 0; /* Position at the left */
